force-app/main/default/objects/User/fields/LP_Authenticator_Verification_Enabled__c.field-meta.xml
<CustomField>
    <fullName>LP_Authenticator_Verification_Enabled__c</fullName>
    <label>LP Authenticator Verification Enabled</label>
    <description>Indicates if the user has enabled authenticator app (TOTP) verification as their MFA method</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>