force-app/main/default/objects/User/fields/LP_Email_Verification_Enabled__c.field-meta.xml
<CustomField>
    <fullName>LP_Email_Verification_Enabled__c</fullName>
    <label>LP Email Verification Enabled</label>
    <description>Indicates if the user has enabled email verification as their MFA method</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>