force-app/main/default/objects/User/fields/LP_MFA_Enabled__c.field-meta.xml
<CustomField>
    <fullName>LP_MFA_Enabled__c</fullName>
    <label>LP MFA Enabled</label>
    <description>Indicates if the user has completed MFA authenticator setup</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>