force-app/main/default/objects/User/fields/LP_MFA_Reminder_Dismissed__c.field-meta.xml
<CustomField>
    <fullName>LP_MFA_Reminder_Dismissed__c</fullName>
    <label>LP MFA Reminder Dismissed</label>
    <description>Tracks when the user last dismissed the MFA enrollment reminder banner. Used to re-show the banner after 7 days.</description>
    <type>DateTime</type>
</CustomField>