force-app/main/default/objects/User/fields/LP_SMS_Code_Expiry__c.field-meta.xml
<CustomField>
    <fullName>LP_SMS_Code_Expiry__c</fullName>
    <label>LP SMS Code Expiry</label>
    <description>Expiration time for the SMS verification code</description>
    <type>DateTime</type>
</CustomField>