force-app/main/default/objects/User/fields/LP_SMS_Enabled__c.field-meta.xml
<CustomField>
    <fullName>LP_SMS_Enabled__c</fullName>
    <label>LP SMS Enabled</label>
    <description>Indicates if the user has completed SMS verification setup</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>