force-app/main/default/objects/User/fields/LP_SMS_Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>LP_SMS_Verification_Code__c</fullName>
    <label>LP SMS Verification Code</label>
    <description>Temporary SMS verification code for phone number verification. Auto-cleared after successful verification.</description>
    <type>Text</type>
    <length>6</length>
</CustomField>