force-app/main/default/objects/User/fields/LP_SMS_Verification_Enabled__c.field-meta.xml
<CustomField>
    <fullName>LP_SMS_Verification_Enabled__c</fullName>
    <label>LP SMS Verification Enabled</label>
    <description>Indicates if the user has enabled SMS verification as their MFA method</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>